src/components/tilePane/view/Provider/config/TabBar/style.module.css
.tabTitle {
  height: 100%;
  flex-grow: 1;
  display: flex;
  justify-content: center;
  align-items: center;
}

.tabBar {
  display: flex;
  width: 100%;
  height: 100%;
  justify-content: space-around;
}
.tab {
  width: 100%;
  height: 100%;
}
.tabMoving {
  padding: 0.3em 1em;
  border: solid 1px #002c1d;
  border-radius: 4px;
  background: #f5ffd3;
}

.tabInner {
  height: 100%;
  display: flex;
  align-items: center;
  color: #000000;
}
.tabInnerOff {
  height: 100%;
  border-left: 1px solid #d1d1d18f;
  border-bottom: 1px solid #b9b9b98f;
  border-right: 1px solid #8787878f;
  background: #e9e9e9;
  display: flex;
  align-items: center;
  box-shadow: inset 0px 1px 5px 2px #cfcfcf9c;
}

.tabInner:hover .off {
  opacity: 1;
}

.tabInnerOff:hover .off {
  opacity: 1;
}
.off {
  transition: 233ms;
  flex-grow: 0;
  opacity: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  width: 14px;
  font-size: 1.2em;
  height: 14px;
  margin-right: 10px;
  cursor: pointer;
}

